[workspace]
members = [
	"onlivfe",
	"onlivfe_cache_store",
	"onlivfe_db_store",
	"onlivfe_net",
	"onlivfe_wrapper",
]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2021"
authors = ["ljoonal"]
license = "AGPL-3.0-or-later"
homepage = "https://onlivfe.com"
repository = "https://github.com/onlivfe/core"
categories = ["games"]
keywords = ["onlivfe", "social_vr", "social_platform", "social_network", "social"]

[workspace.dependencies]
onlivfe = { version = "=0.0.0-alpha.0", path = "onlivfe" }
onlivfe_net = { version = "=0.0.0-alpha.0", path = "onlivfe_net" }
onlivfe_wrapper = { version = "=0.0.0-alpha.0", path = "onlivfe_wrapper" }
onlivfe_cache_store = { version = "=0.0.0-alpha.0", path = "onlivfe_cache_store" }
onlivfe_db_store= { version = "=0.0.0-alpha.0", path = "onlivfe_db_store" }

# Data mangling
serde = { version = "1.0.152" }
serde_with = { version = "2.2.0", features = ["time_0_3", "json"] }
uuid = { version = "1.3.0", features = ["serde"] }
time = { version = "0.3.20", features = ["serde-well-known"] }
strum = { version = "0.24.1" }

# Utility
log = "0.4.17"
tracing = "0.1.37"
futures = { version = "0.3.26" }
async-trait = "0.1.64"
tokio = "1"

# Platform specifics
neos = { version = "0.6.1", features = [] }
#neos = { path = "../neos_rs", features = [] }
chilloutvr = { version = "0.2.1", features = [] }
#chilloutvr = { path = "../chilloutvr_rs", features = [] }
vrc = { version = "0.1.0-alpha.3", features = [] }
#vrc = { path = "../vrc_rs", features = [] }
