[workspace]
members = [
	"onlivfe",
	"onlivfe_cache_store",
	"onlivfe_db_store",
	"onlivfe_net",
	"onlivfe_wrapper",
]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2021"
authors = ["ljoonal"]
license = "AGPL-3.0-or-later"
homepage = "https://onlivfe.com"
repository = "https://github.com/onlivfe/core"
categories = ["games"]
keywords = ["onlivfe", "social_vr", "social_platform", "social_network", "social"]

[workspace.dependencies]
onlivfe = { version = "=0.0.0-alpha.0", path = "onlivfe" }
onlivfe_net = { version = "=0.0.0-alpha.0", path = "onlivfe_net" }
onlivfe_wrapper = { version = "=0.0.0-alpha.0", path = "onlivfe_wrapper" }
onlivfe_cache_store = { version = "=0.0.0-alpha.0", path = "onlivfe_cache_store" }
onlivfe_db_store= { version = "=0.0.0-alpha.0", path = "onlivfe_db_store" }

# Data mangling
serde = { version = "1" }
serde_with = { version = "2.3", features = ["time_0_3", "json"] }
uuid = { version = "1.3", features = ["serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
strum = { version = "0.24" }

# Utility
log = "0.4"
tracing = "0.1"
futures = { version = "0.3" }
async-trait = "0.1"
tokio = "1"

# Platform specifics
neos = { version = "0.6.2", features = [] }
#neos = { path = "../neos_rs", features = [] }
chilloutvr = { version = "0.3.0", features = [] }
#chilloutvr = { path = "../chilloutvr_rs", features = [] }
vrc = { version = "0.1.0", features = [] }
#vrc = { path = "../vrc_rs", features = [] }
