[package]
name = "onlivfe"
description = "The core powering listing social (VR) platforms' peeps"
documentation = "https://docs.rs/onlivfe"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "onlivfe"
path = "src/lib.rs"

[features]
default = ["rand_util"]
rand_util = []

[dependencies]

serde = { workspace = true, features = ["derive"]  }
serde_with = { workspace = true }
uuid = { workspace = true }
time = { workspace = true, features = ["macros"]  }
strum = { workspace = true, features = ["derive"]  }

async-trait = { workspace = true }
futures = { workspace = true }

# Platform specifics
vrc = { workspace = true }
neos = { workspace = true }
chilloutvr = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
