[package]
name = "onlivfe_cache_store"
description = "A database storage backed for onlivfe"
documentation = "https://docs.rs/onlivfe_cache_store"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "onlivfe_cache_store"
path = "src/lib.rs"

[dependencies]
directories = "4"
bson = "2"

onlivfe = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Platform specifics
vrc = { workspace = true, features = [] }
neos = { workspace = true, features = [] }
chilloutvr = { workspace = true, features = [] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
