[package]
name = "onlivfe_db_store"
description = "A database storage backed for onlivfe"
documentation = "https://docs.rs/onlivfe_db_store"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["src", "Cargo.toml", "build.rs", "entities", "LICENSE", "README.md"]
build = "build.rs"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "onlivfe_db_store"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]

[dependencies]
num_cpus = "1.16.0"

onlivfe = { workspace = true }
async-trait = { workspace = true }

# Platform specifics
vrc = { workspace = true, features = [] }
resonite = { workspace = true, features = [] }
chilloutvr = { workspace = true, features = [] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
	"runtime-tokio",
	"sqlite",
	"json",
	"uuid",
	"time",
	"migrate",
	"macros",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
