[package]
name = "onlivfe_wrapper"
description = "Business logic & interface of onlivfe"
documentation = "https://docs.rs/onlivfe_wrapper"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "onlivfe_wrapper"
path = "src/lib.rs"

[dependencies]
human-panic = "1"
tracing = { workspace = true }

onlivfe = { workspace = true }
onlivfe_net = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true  }
time = { workspace = true  }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.0"
log = "0.4" 

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
